<resources>
    <string name="app_name">Phone Book</string>
    <string name="create_contact">Create Contact</string>
    <string name="save_contact">Save Contact</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="contact_detail">Contact Detail Page</string>
    <string name="name">Name:</string>
    <string name="search">Search</string>
    <string name="phone_number_1">Phone Number:</string>
    <string name="other_number">Other Number:</string>
    <string name="other_number_1">Other Number</string>
    <string name="fields_marked_are_compulsory">Fields marked * are compulsory</string>
    <string name="star">*</string>
    <string name="my_contacts">Contacts</string>
    <string name="email1">Email:</string>
    <string name="add_icon_holder">add icon holder</string>
    <string name="contact_list">Contact List</string>
</resources>