<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.NumberDetailsFragment">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_detail"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/page_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Last Name"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/tv_first_name"
        app:layout_constraintStart_toEndOf="@+id/tv_first_name"/>

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_1"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Phone Number"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/tv_phone_number"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_number"/>

    <TextView
        android:id="@+id/tv_other_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_number"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/other_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/other_number"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/tv_other_number"
        app:layout_constraintStart_toEndOf="@+id/tv_other_number"/>

    <TextView
        android:id="@+id/tv_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email1"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/other_number"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/email"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/tv_email_address"
        app:layout_constraintStart_toEndOf="@+id/tv_email_address"/>



</androidx.constraintlayout.widget.ConstraintLayout>